# old-time

./: .appveyor.yml  .gitignore  .travis.yml  README.md  changelog.md  configure.ac  old-time.cabal
.github/workflows/: haskell-ci.yml
System/: Time.hsc
cbits/: timeUtils.c
include/: HsTime.h
tests/: .gitignore  Tests.hs
