name:		old-time
version:	1.0
license:	BSD3
license-file:	LICENSE
maintainer:	libraries@haskell.org
synopsis:	Time library.
description:
	This package provides the old time library.
    For new code, the new time library is recommended.
exposed-modules:
	System.Time
c-sources:
	cbits/timeUtils.c
include-dirs: include
includes:	HsTime.h
install-includes:	HsTime.h
extensions:	CPP, ForeignFunctionInterface
build-depends: base, old-locale
nhc98-options: -K2M
